--- a/css/service-styles.css
+++ b/css/service-styles.css
@@ -74,3 +74,13 @@
         margin-bottom: 20px;
     }
 }
+
+.service-item 
+{
+    height: 120px;
+    min-height: 120px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+}
