--- a/css/brands-styles.css
+++ b/css/brands-styles.css
@@ -172,3 +172,12 @@
         font-size: 2rem;
     }
 }
+
+.search-icon 
+{
+    position: absolute;
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #6c757d;
+}
