--- a/css/oils-styles.css
+++ b/css/oils-styles.css
@@ -139,3 +139,10 @@
 {
     border-radius: 5px;
 }
+
+.card-body
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
